# pp-meeting-system

./: .gitignore  .pre-commit-config.yaml  Pipfile  config.yml  pyproject.toml  readme.md
.github/workflows/: pr_validation.yml
app/: config.py
app/db/: session.py
app/db/mixins/: timestamp.py
app/models/: __init__.py  comment.py  expense.py  expense_participants.py  meeting.py  meeting_participants.py  user.py
linters/: check_isort.sh  check_pylint.sh  indent_isort.sh
migrations/: env.py
migrations/versions/: 38b4cdb77716_create_tables.py  8074859513a7_create_meeting_participants_table.py  d669081548e2_create_expense_participants_table.py  e17b6dd82a82_relationships_naming_changes.py
