[tool.black]
include = '\.py$'
line-length = 120
skip-string-normalization = true

[tool.isort]
line_length = 120

[tool.pylint.main]
init-hook = 'import sys; sys.path.append(".")'
disable = [
    'invalid-name',
    'invalid-envvar-default',
    'line-too-long',
    'too-many-public-methods',
    'too-few-public-methods',
]
good-names = ['f', 's', 'x', 'n', 'i', 'j', 'k', 'ex', 'Run', '_']

[tool.pylint.format]
max-line-length = 120

[tool.pylint.variables]
init-import = 'no'

[tool.pylint.design]
max-branches = 1000
max-statements = 500

[tool.pylint.'messages control']
disable = [
    'missing-docstring',
    'empty-docstring'
]
ignore-paths = [
    'migrations/.*'
]

[tool.poetry]
name = "pp-meeting-system"
version = "0.1.0"
description = ""
authors = ["vmred <16134967+vmred@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
# dev packages
python = "^3.9"
black = "==23.3.0"
isort = "==5.12.0"
pylint = "==2.16.1"
pytest = "==7.3.1"
pytest-html = "==3.2.0"
pre-commit = "==3.4.0"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "==0.28.0"
sqlalchemy = "==2.0.20"
alembic = "==1.12.0"
psycopg2-binary = "==2.9.7"
pydantic = "==2.3.0"
pyyaml = "==6.0.1"
contextvars = "==2.4"
greenlet = "==2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
